# serializer version: 1
# name: TestAdministratorRoles.test_ok[None]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'fb085f7f',
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestAdministratorRoles.test_ok[base]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': 'base',
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'fb085f7f',
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestAdministratorRoles.test_ok[full]
  dict({
    'active': True,
    'administrator': True,
    'administrator_role': 'full',
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'fb085f7f',
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestAdministratorRoles.test_ok[users]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': 'users',
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'fb085f7f',
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdateUser.test_force_reset
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': True,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'fb085f7f',
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdateUser.test_groups[resp_1]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': '7cf872dc',
        'name': 'hydrogeologists',
      }),
      dict({
        'id': 'fb085f7f',
        'name': 'musicians',
      }),
    ]),
    'handle': 'qtaylor',
    'id': '3cbb22cc',
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdateUser.test_groups[resp_2]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': '7cf872dc',
        'name': 'hydrogeologists',
      }),
    ]),
    'handle': 'qtaylor',
    'id': '3cbb22cc',
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdateUser.test_groups[resp_3]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'qtaylor',
    'id': '3cbb22cc',
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdateUser.test_password
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'fb085f7f',
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdateUser.test_primary_group[False]
  dict({
    'id': 'bad_request',
    'message': 'User is not member of primary group',
  })
# ---
# name: TestUpdateUser.test_primary_group[True]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 'fb085f7f',
        'name': 'musicians',
      }),
    ]),
    'handle': 'laura56',
    'id': '7cf872dc',
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': dict({
      'id': 'fb085f7f',
      'name': 'musicians',
    }),
  })
# ---
# name: test_get_roles
  list([
    dict({
      'description': 'Manage who is an administrator and what they can do.',
      'id': 'full',
      'name': 'Full',
    }),
    dict({
      'description': 'Manage instance settings and administrative messages.',
      'id': 'settings',
      'name': 'Settings',
    }),
    dict({
      'description': 'Manage users in any space. Delete any space.',
      'id': 'spaces',
      'name': 'Spaces',
    }),
    dict({
      'description': 'Create user accounts. Control activation of user accounts.',
      'id': 'users',
      'name': 'Users',
    }),
    dict({
      'description': '''
        Provides ability to:
        - Create new spaces even if the `Free Spaces` setting is not enabled.
        - Manage HMMs and common references.
        - View all running jobs.
        - Cancel any job.
      ''',
      'id': 'base',
      'name': 'Base',
    }),
  ])
# ---
# name: test_get_user
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': 'base',
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'fb085f7f',
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_list_users
  dict({
    'found_count': 3,
    'items': list([
      dict({
        'active': True,
        'administrator': True,
        'administrator_role': 'full',
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'bob',
        'id': 'bf1b993c',
        'last_password_change': str,
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': 'base',
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'leeashley',
        'id': 'fb085f7f',
        'last_password_change': str,
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': 'full',
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'zclark',
        'id': '7cf872dc',
        'last_password_change': str,
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_update_admin_role[None]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'fb085f7f',
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_update_admin_role[full]
  dict({
    'active': True,
    'administrator': True,
    'administrator_role': 'full',
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'fb085f7f',
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_update_admin_role[users]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': 'users',
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'fb085f7f',
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
